# c-11

./: 11.txt  appcache.txt  install.sh  reading  regenerateApp.txt
AOP/: .cproject  .project  reading
AOP/src/: AccessControlPolicy.cpp  AccessControlPolicy.h  AccessControlPreProcess.cpp  AccessControlPreProcess.h  BaseAspect.cpp  BaseAspect.h  CheckDataValidity.cpp  CheckDataValidity.h  RoleBasedAccessControlPolicy.cpp  RoleBasedAccessControlPolicy.h  SmackAccessControlPolicy.cpp  SmackAccessControlPolicy.h  TimeElapsedAspect.cpp  TimeElapsedAspect.h  main.cpp  make.sh  test
BridgeMode/: .cproject  .project
CompositMode/: .cproject  .project
CpuBinding/: .cproject  .project
DistributedLockWithRedis/: .cproject  .project
FileToRedis/: .cproject  .project
MessageDispatch/: .cproject  .project
PG/: reading
Ping/: .cproject  .project
Ping/src/: test  (+7 more)
Pub_Sub_For_Redis/: .cproject  .project
SimLog/: .cproject  .project
UdpServer/: .cproject  .project
UnBlockRedis/: .cproject  .project
VisitorMode/: .cproject  .project  reading
bind/: reading
c11/: example0.c  make.sh  reading  test
codesecurity/: codecheck.sh  reading
designdemo/: .cproject  .project  redisPacket.cpp
designdemo/src/: DesignMode  EchoResponseHandler.cpp  EchoResponseHandler.h  HttpConfig.cpp  HttpConfig.h  HttpKey.cpp  HttpKey.h  HttpServer.cpp  HttpServer.h  HttpThread.cpp  HttpThread.h  HttpUtility.cpp  HttpUtility.h  IP.cpp  IP.h  InputMsgHandler.cpp  InputMsgHandler.h  KafkaClientConfig.cpp  KafkaClientConfig.h  KafkaClientPool.h  KafkaConsumerClient.cpp  KafkaConsumerClient.h  KafkaProducerClient.cpp  KafkaProducerClient.h  Makefile  Makefile.am  Makefile.in  MemoryBlock.cpp  MemoryBlock.h  MessageDispatch  MessageDispatch.cpp  MessageDispatch.h  MessageHandler.h  OutputMsgHandler.cpp  OutputMsgHandler.h  Pointer.cpp  Pointer.h  PrintTask.cpp  PrintTask.h  RedisClient.cpp  (+33 more)
designdemo/src/.deps/: MessageDispatch-EchoResponseHandler.Po  MessageDispatch-HttpConfig.Po  MessageDispatch-HttpKey.Po  MessageDispatch-HttpServer.Po  MessageDispatch-HttpThread.Po  MessageDispatch-HttpUtility.Po  MessageDispatch-IP.Po  MessageDispatch-InputMsgHandler.Po  MessageDispatch-KafkaClientConfig.Po  MessageDispatch-KafkaConsumerClient.Po  MessageDispatch-KafkaProducerClient.Po  MessageDispatch-MemoryBlock.Po  MessageDispatch-MessageDispatch.Po  MessageDispatch-OutputMsgHandler.Po  MessageDispatch-Pointer.Po  MessageDispatch-PrintTask.Po  MessageDispatch-RedisClient.Po  MessageDispatch-RedisClientPool.Po  MessageDispatch-ResponseHandler.Po  MessageDispatch-ResponseHandlerInfo.Po  MessageDispatch-Shape.Po  MessageDispatch-SockectUtility.Po  MessageDispatch-Square.Po  MessageDispatch-StringBeads.Po  MessageDispatch-StringDecompress.Po  MessageDispatch-StringOp.Po  MessageDispatch-ThreadPool.Po  MessageDispatch-UrlMapper.Po  MessageDispatch-main.Po
designdemo/src/autom4te.cache/: output.0  traces.1
designmode/: .cproject  .project
designmode/src/: Makefile  Makefile.am  Makefile.in  SingleInstance.h  StringOp.cpp  StringOp.h  config.h  config.status  configure  configure.ac  configure.scan  main.cpp
designmode/src/.deps/: DesignMode-StringOp.Po  DesignMode-main.Po
designmode/src/autom4te.cache/: output.1  traces.0  traces.1
gmock/: .reading.swp  gmock_test  make.sh  reading  test  test.cpp
inotify/: make.sh  reading  test  test.cpp
linux/: reading
lua/: reading
memory_pool/: reading  test  test.cpp
redis/: reading
serialize_iguana/: reading
stack_memory_test/: Test  make.sh  test.cpp
(+425 files in other folders)
